courses/430_programming-languages/assignment-8/tests/error/error50.nex
poka a > b { raspetchatat 1; }
